--- a/xenon-button-group.html
+++ b/xenon-button-group.html
@@ -1,4 +1,4 @@
-﻿<link rel="import" href="../polymer/polymer.html" />
+<link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../iron-selector/iron-selectable.html">
 <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
 <!--link rel="import" href="../iron-a11y-keys-behavior/iron-a11y-keys-behavior.html"-->
@@ -21,11 +21,12 @@ information about `paper-button`.
 <dom-module id="xenon-button-group">
     <template>
         <style>
+            :host { display: inline-block }
             #error { color: red; }
             ::content paper-button[active] { background-color: var(--primary-color); color: white; }
         </style>
-        <content></content>
-        <div id="error" hidden>Please Select An Option</div>
+            <content></content>
+            <div id="error" hidden>Please Select An Option</div>
     </template>
 
     <script>
@@ -38,12 +39,12 @@ information about `paper-button`.
                 Polymer.IronSelectableBehavior,
                 Polymer.IronFormElementBehavior
             ],
-            ready: function () {
+            created: function () {
                 this.selectable = 'paper-button';
                 this.selectedAttribute = 'active';
             },
             validate: function () {
-                var valid = (this.selected != undefined);
+                var valid = (this.selected != undefined || !this.required);
                 this.$.error.hidden = valid;
                 return valid;
             }
